[package]
name = "bluebell"
version = "0.1.0"
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] 
lalrpop = "0.19.9"


[dependencies]
lalrpop-util = {version = "0.19", features = ["lexer"]}
regex = "1"


[package.metadata.raze]
workspace_path = "//products/bluebell"
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]
output_buildfile_suffix = "BUILD.bazel"
gen_workspace_prefix = "vendored_hello_cargo_library"
genmode = "Vendored"
package_aliases_dir = "cargo"
default_gen_buildrs = false