[package]
name = "eth-spout"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = "0.6.20"
bech32 = "0.9.1"
ethers = { version = "2.0.9", default-features = false, features = ["rustls"] }
serde = { version = "1.0.186", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
