[package]
name = "evm_assembly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evm = { git = "https://github.com/Zilliqa/evm.git", branch="master" }
primitive-types = { version = "0.12", default-features = false }
hex = "0.4"
sha3 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4.2"