[package]
name = "bridge-validators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ethers = "2.0.11"
ethers-contract = "2.0.11"
ethers_provider = "0.2.2"
serde = "1.0.193"
tokio = {version= "1.35.0", features = ["macros"]}
