[package]
name = "bridge-validators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
ethers = "2.0.11"
ethers-contract = "2.0.11"
futures = "0.3.29"
libp2p = { version = "0.52.4", features = [
  "gossipsub",
  "macros",
  "tcp",
  "tokio",
  "noise",
  "mdns",
  "request-response",
  "kad",
  "identify",
  "serde",
  "yamux",
] }
serde = "1.0.193"
serde_json = { version = "1.0.108", features = ["raw_value"] }
tokio = { version = "1.35.0", features = ["macros", "signal"] }
tokio-stream = "0.1.14"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
