[package]
name = "bridge-validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-stream = "0.3.5"
async-trait = "0.1.77"
clap = { version = "4.4.11", features = ["derive"] }
ethers = { version = "2.0.11", features = ["ws"] }
ethers-contract = "2.0.11"
futures = "0.3.29"
libp2p = { version = "0.53.2", features = [
  "gossipsub",
  "macros",
  "tcp",
  "tokio",
  "noise",
  "mdns",
  "request-response",
  "json",
  "kad",
  "identify",
  "serde",
  "yamux",
] }
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = { version = "1.0.108", features = ["raw_value"] }
tokio = { version = "1.35.0", features = [
  "macros",
  "signal",
  "rt-multi-thread",
] }
tokio-stream = "0.1.14"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
