[package]
name = "pdtlisten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0"
anyhow = "1.0.71"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
jsonrpsee = { version = "0.20.0", features = ["http-client"] }
pdtbq = { path = "../pdtbq" }
pdtdb = { path = "../pdtdb" }
pdtpsql = { path = "../pdtpsql" }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio"] }
gcp-bigquery-client = "0.18.0"

tokio = { version = "1.28.1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "process",
] }
async-stream = "0.3.5"
tokio-stream = "0.1.14"
itertools = "0.11.0"
