[lib]
proc-macro = true

[package]
name = "psql_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
sqlx = { version = "0.7.1", features = [
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
] }
